# flowception

./: .flake8  .gitignore  CONTRIBUTING.md  Readme.md  environment.yaml  launch_i2v.sh  launch_interp.sh  launch_t2v.sh  launcher_with_accelerate.py  main.py  pyproject.toml  test_run.sh
.github/: copilot-instructions.md
.history/: .gitignore_20260515063635  .gitignore_20260515234245  .gitignore_20260516000825
.history/app_metadata/: api_server_20260515194201.py  api_server_20260515225120.py  api_server_20260515225212.py  api_server_20260515233721.py  api_server_20260515234043.py  api_server_20260515234657.py  api_server_20260516000644.py  api_server_20260516000658.py  api_server_20260516022014.py  api_server_20260516022626.py  api_server_20260516023035.py  api_server_20260516023450.py  api_server_20260516024149.py  api_server_20260516024621.py  api_server_20260516025222.py  api_server_20260516041416.py  api_server_20260516041533.py  profile_generator_20260515225355.py  rule_engine_20260515080502.py  rule_engine_20260515225552.py  rule_engine_20260515225643.py  rule_engine_20260515225816.py  test_rule_engine_20260515225936.py  test_rule_engine_20260515230054.py
.pydevice/: settings.json
.trunk/: trunk.yaml
app_metadata/: README-rule-engine.md  __init__.py  api_server.py  build_macos_app.py  compatibility-policy.json  dependency-decision-matrix.json  desktop_app.py  index.html  profile_generator.py  rule_engine.py  sample-evaluation-output.json  sample-profile-macos.json  source-monitoring.json  test_rule_engine.py  venv_bootstrap.py
config/: default.py
configs/flowception/i2v/: openvid_i2v.yaml  openvid_ltx_i2v.yaml
configs/flowception/interpolate/: openvid_interpolate.yaml  openvid_ltx_interpolate.yaml
configs/flowception/t2v/: openvid_ltx_t2v.yaml
configs/flowception/toy/: toy_coloring_i2v.yaml  toy_coloring_interpolate.yaml  toy_coloring_t2v.yaml
data/datasets/: custom_webdataset.py  dataloader.py  dataset.py  imagenet_dataset.py  paths.yaml  text_dataset.py
data/datasets/video/: custom_subjectness.py  custom_subjectness_aug.py  kinetics_flowception.py  openvid.py  openvid_flowception.py  re10k.py  taichi.py  taichi_cache.py  toy_coloring.py  vchitect_flowception.py  youcook2.py  youcook2_iter.py
data/loaders/: samplers.py
engine/: data_classes.py  flowception.py  flowception_interpolate.py  flowception_t2v.py  trainer.py  utils.py
experimental/: chunked_sampler.py
helpers/: checkpoint.py  ema.py  lr_schedulers.py  modeling.py  utils.py
helpers/video_utils/: visualization.py
modules/: attention.py  conditioning.py  get_model.py  ltx_flowception.py  metadit_flowception.py  rope.py  utils.py  vae.py
modules/diffusion/: denoiser.py  denoiser_scaling.py  sigma_sampling.py
modules/flowception/: align.py  helpers.py  losses.py  sampling.py  schedulers.py
modules/sampling/: apg.py
modules/video/video_modules/: depth_modules.py  video_rope.py
modules/video/video_vae/: context_parallel_ops.py  cosmos_ae.py  modeling_block.py  modeling_causal_conv.py  modeling_causal_vae.py  modeling_enc_dec.py  modeling_resnet.py  utils.py  vae_args.py
tutorial/: rotary.py  toy_transformer.py  tutorial.ipynb
(+1 files in other folders)
